Navigation for smartphones
Added markup and styling navigation for smartphones. There is also a script to adapt the logo of the navigation bar

--- a/css/style-bs4.css
+++ b/css/style-bs4.css
@@ -9,3 +9,16 @@
 button:focus {
 	outline: 0;
 }
+.card {
+	max-width: 540px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+	color:#000;
+}
+
+a:hover {
+    color: #0056b3;
+    text-decoration:none !important;
+}
+
