--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,24 @@ nav {
 .form-control:focus {
 	box-shadow:0px 0px 0px transparent;
 }
+.main-card {
+	width: 95%;
+	height: 34px;
+	font-size: 14px;
+}
+
+.main-card .card-body {
+	padding-top: 0;
+}
+
+.main-achievement-item {
+	font-size: 0.9rem;
+	margin-bottom: 34px;
+	display: flex;
+}
+
+.main-achievement-item img{
+	margin-right: 20px;
+	height: 34px;
+	width: 34px;
+}
