--- a/fonts/TTNorms-Regular/style.css
+++ b/fonts/TTNorms-Regular/style.css
@@ -1,9 +1,8 @@
 @font-face {
-    font-family: 'TT Norms';
-    src: local('TT Norms Regular'), local('TT-Norms-Regular'),
-        url('TTNorms-Regular.woff2') format('woff2'),
-        url('TTNorms-Regular.woff') format('woff'),
-        url('TTNorms-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-  }
+	font-family: 'TT Norms';
+	src: local('TT Norms Regular'), local('TT-Norms-Regular'),
+			url('TTNorms-Regular.woff2') format('woff2'),
+			url('TTNorms-Regular.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
+}
