--- a/css/style-bs4.css
+++ b/css/style-bs4.css
@@ -26,3 +26,10 @@ a:hover {
 	border: 0;
 	background: transparent;
 }
+
+.btn-outline-primary {
+	color: #000;
+	width: 120px;
+	border-radius: 40px;
+	font-size: 0.6rem;
+}
