--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,13 @@ nav {
 	height: 34px;
 	width: 34px;
 }
+
+.service-mobile-card {
+	height: 334px;
+	background: #f5f3f3;
+	border-radius: 25px;
+	font-size: 0.9rem;
+}
+.service-mobile-card-item {
+	display: flex;
+}
