--- a/css/style-bs4.css
+++ b/css/style-bs4.css
@@ -1,3 +1,6 @@
+a {
+	color: #fff;
+}
 .bg-light {
 	background-color: #FDFBFD !important;
 }
@@ -27,9 +30,13 @@ a:hover {
 	background: transparent;
 }
 
-.btn-outline-primary {
+.payment-btn, .btn-outline-primary {
 	color: #000;
 	width: 120px;
 	border-radius: 40px;
 	font-size: 0.6rem;
+}
+.btn-outline-primary:hover {
+	cursor: pointer;
+	color: #fff !important;
 }
