--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,23 @@ nav {
 .service-mobile-card-item {
 	display: flex;
 }
+
+.payment, .payment-mobile {
+	color: #fff;
+	height: 300px;
+	background: #3993F3;
+	font-size: 0.875rem;
+}
+
+.payment-item {
+	display: flex;
+}
+.payment-item input {
+	width: 65%;
+}
+.payment-btn {
+	color: #fff;
+	background: #80A3FF;
+	border-radius: 30px;
+	border: 0;
+}
