--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+:root {
+	font-size: 16px;
+}
+
+
 * {
 	font-family: 'TT Norms';
 }
@@ -57,7 +62,7 @@ nav {
 }
 
 .service-mobile-card {
-	height: 334px;
+	height: 354px;
 	background: #f5f3f3;
 	border-radius: 25px;
 	font-size: 0.9rem;
@@ -70,7 +75,7 @@ nav {
 	color: #fff;
 	height: 300px;
 	background: #3993F3;
-	font-size: 0.875rem;
+	font-size: 0.8rem;
 }
 
 .payment-item {
