--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,13 @@ nav {
 	border-radius: 30px;
 	border: 0;
 }
+.main-news-comments {
+	background: #F5F3F3;
+}
+.btn-outline-dark {
+	border-color: #000;
+	color: #000;
+	width: 105px;
+	height: 29px;
+	font-size: 0.75rem;
+}
