--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,18 @@ nav {
 	height: 29px;
 	font-size: 0.75rem;
 }
+.footer-logo a {
+	font-size: 1.5rem;
+	color: #000;
+}
+
+.footer p{
+	font-size: 0.875rem;
+}
+.footer-number {
+	font-size: 0.875rem;
+}
+.footer-number img {
+	width: 1rem;
+	height: 1rem;
+}
