--- a/css/style.css
+++ b/css/style.css
@@ -111,3 +111,19 @@ nav {
 .main-news-comments-item button {
 	padding: 0;
 }
+
+
+/*.service-desktop-card-item {
+	width: 641px;
+	height: 626px;
+	border: 1px solid #000;
+	background: url("../img/Group.svg");	
+}
+
+
+@media screen and (min-width: 768px) {
+	.service-mobile {
+		display: none;
+	}
+}
+*/
