--- a/css/style.css
+++ b/css/style.css
@@ -138,12 +138,12 @@ nav {
 	font-size: 1.5rem;
 	border-bottom: 4px solid #3993F3;
 }
-.mobile-slaider-tariffs {
+.mobile-slider-tariffs {
 	flex-wrap: nowrap;
 	overflow-x: auto;
 }
 
-.mobile-slaider-tariffs-item {
+.mobile-slider-tariffs-item {
 	font-size: 0.875rem;
 	width: 312px;
 	height: 192px;
@@ -151,7 +151,7 @@ nav {
 	border-radius: 7px;
 	box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2);
 }
-.mobile-slaider-tariffs-item-price {
+.mobile-slider-tariffs-item-price {
 	color: #3993F3;
 }
 .smart-home-form a {
